# haskell-updater

./: CHANGELOG.md  Main.hs  OldMain.hs  Output.hs  README.md  TODO  haskell-updater.cabal
.github/workflows/: haskell.yml
Distribution/Gentoo/: CmdLine.hs  GHC.hs  Packages.hs  PkgManager.hs  Types.hs  Util.hs
Distribution/Gentoo/CmdLine/: Types.hs
Distribution/Gentoo/PkgManager/: Types.hs
Distribution/Gentoo/Types/: HUMode.hs
man/: haskell-updater.1
src/: Main.hs  Output.hs
src/Distribution/Gentoo/: CmdLine.hs  Env.hs  GHC.hs  Packages.hs  PkgManager.hs  Types.hs  Util.hs
src/Distribution/Gentoo/CmdLine/: Types.hs
src/Distribution/Gentoo/PkgManager/: Types.hs
src/Distribution/Gentoo/Types/: HUMode.hs  Mode.hs
