cabal-version:      3.0
Name:                haskell-updater
Homepage:            https://haskell.org/haskellwiki/Gentoo#haskell-updater
Version:             1.3.2
Synopsis:            Rebuild Haskell dependencies in Gentoo
Description:         haskell-updater rebuilds Haskell packages on Gentoo
                     after a GHC upgrade or a dependency upgrade.

                     haskell-updater is written so as to use only
                     GHC's boot libraries so as to have no external
                     dependencies.

Category:            Distribution
License:             GPL
License-file:        COPYRIGHT
Copyright:           (c) Ivan Lazar Miljenovic,
                         Lennart Kolmodin,
                         Stephan Friedrichs,
                         Emil Karlson
Author:              Ivan Lazar Miljenovic,
                     Lennart Kolmodin,
                     Stephan Friedrichs,
                     Emil Karlson
Maintainer:          haskell@gentoo.org
Build-Type:          Simple
Extra-Source-Files:  TODO,
                     man/haskell-updater.1

Source-Repository head
    Type:         git
    Location:     https://github.com/gentoo-haskell/haskell-updater.git
bug-reports:        https://github.com/gentoo-haskell/haskell-updater/issues

flag pedantic
    description: Enable -Werror
    default:     False
    manual:      True

common all
    ghc-options:        -Wall

    if flag(pedantic)
        ghc-options:    -Werror

Executable haskell-updater
  Main-Is:          Main.hs
  Other-Modules:    Distribution.Gentoo.GHC,
                    Distribution.Gentoo.Packages,
                    Distribution.Gentoo.PkgManager,
                    Distribution.Gentoo.Util,
                    Output,
                    Paths_haskell_updater
  Ghc-Options:      -Wall
  Ghc-Prof-Options: -auto-all -caf-all -rtsopts

  Build-Depends:    base >= 4 && < 5,
                    Cabal >= 1.8,
                    containers,
                    filepath,
                    directory,
                    bytestring,
                    process
