cabal-version:      3.0
name:               haskell-updater
homepage:           https://github.com/gentoo-haskell/haskell-updater#readme
bug-reports:        https://github.com/gentoo-haskell/haskell-updater/issues
version:            1.3.2
synopsis:           Rebuild Haskell dependencies in Gentoo
description:
  haskell-updater rebuilds Haskell packages on Gentoo
  after a GHC upgrade or a dependency upgrade.
  haskell-updater is written so as to use only
  GHC's boot libraries so as to have no external
  dependencies.

category:           Distribution
license:            GPL-3.0-or-later
license-file:       LICENSE
copyright:
  (c) Ivan Lazar Miljenovic,
  Lennart Kolmodin,
  Stephan Friedrichs,
  Emil Karlson

author:
  Ivan Lazar Miljenovic,
  Lennart Kolmodin,
  Stephan Friedrichs,
  Emil Karlson

maintainer:         haskell@gentoo.org
build-type:         Simple
extra-source-files:
  man/haskell-updater.1
  TODO

tested-with:        GHC ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.4

source-repository head
  type:     git
  location: https://github.com/gentoo-haskell/haskell-updater.git

flag pedantic
  description: Enable -Werror
  default:     False
  manual:      True

common all
  ghc-options: -Wall

  if flag(pedantic)
    ghc-options: -Werror

executable haskell-updater
  import:           all
  main-is:          Main.hs
  other-modules:
    Distribution.Gentoo.GHC
    Distribution.Gentoo.Packages
    Distribution.Gentoo.PkgManager
    Distribution.Gentoo.Util
    Output
    Paths_haskell_updater

  autogen-modules:  Paths_haskell_updater
  build-depends:
    , base        >=4.12 && <5
    , bytestring  >=0.11.1.0
    , Cabal       >=1.8
    , containers
    , directory   >=1.2.5.0
    , filepath
    , process

  default-language: Haskell2010
